# serializer version: 1
# name: test_entities_created[media_player.samsung_tv-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'source_list': list([
        'av1',
        'av2',
        'av3',
        'component1',
        'component2',
        'component3',
        'dvi1',
        'dvi2',
        'dvi3',
        'hdmi1',
        'hdmi2',
        'hdmi3',
        'hdmi4',
        'pc1',
        'pc2',
        'pc3',
        'rvu',
        's_video1',
        's_video2',
        's_video3',
        'tv',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.samsung_tv',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.TV: 'tv'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'samsung_exlink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3468>,
    'translation_key': 'tv',
    'unique_id': '01KPBBPM6WCQ8148EFR0TCG1WW',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_created[media_player.samsung_tv-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'tv',
      'friendly_name': 'Samsung TV',
      'is_volume_muted': False,
      'source': 'hdmi1',
      'source_list': list([
        'av1',
        'av2',
        'av3',
        'component1',
        'component2',
        'component3',
        'dvi1',
        'dvi2',
        'dvi3',
        'hdmi1',
        'hdmi2',
        'hdmi3',
        'hdmi4',
        'pc1',
        'pc2',
        'pc3',
        'rvu',
        's_video1',
        's_video2',
        's_video3',
        'tv',
      ]),
      'supported_features': <MediaPlayerEntityFeature: 3468>,
      'volume_level': 0.2,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.samsung_tv',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
